--- a/FunctionGraphManager/App.xaml
+++ b/FunctionGraphManager/App.xaml
@@ -1,11 +1,85 @@
 ﻿<Application x:Class = "FunctionGraphManager.App"
              xmlns = "http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:system = "clr-namespace:System;assembly=mscorlib"
+             xmlns:xctk = "http://schemas.xceed.com/wpf/xaml/toolkit"
              StartupUri = "Views/MainWindow.xaml">
 
     <Application.Resources>
         <ResourceDictionary>
+            <system:Double x:Key = "BorderThicknessSize">1</system:Double>
+            <system:Double x:Key = "FontSize">20</system:Double>
+            <GridLength x:Key = "GridSpacing">10</GridLength>
+            <system:Double x:Key = "Spacing">10</system:Double>
+            <Brush x:Key = "BlackBrush">Black</Brush>
+            <Brush x:Key = "GrayBrush">Gray</Brush>
 
+            <Thickness x:Key = "ControlPadding"
+                       Left = "5"
+                       Right = "5"
+                       Top = "2"
+                       Bottom = "2" />
+
+            <Thickness x:Key = "BorderThickness"
+                       Left = "{StaticResource BorderThicknessSize}"
+                       Right = "{StaticResource BorderThicknessSize}"
+                       Top = "{StaticResource BorderThicknessSize}"
+                       Bottom = "{StaticResource BorderThicknessSize}" />
+
+            <Style TargetType = "TextBlock">
+                <Setter Property = "FontSize"
+                        Value = "{StaticResource FontSize}" />
+            </Style>
+
+            <Style TargetType = "Button">
+                <Setter Property = "Padding"
+                        Value = "{StaticResource ControlPadding}" />
+            </Style>
+
+            <Style TargetType = "TextBox">
+                <Setter Property = "HorizontalContentAlignment"
+                        Value = "Left" />
+                <Setter Property = "VerticalContentAlignment"
+                        Value = "Center" />
+                <Setter Property = "FontSize"
+                        Value = "{StaticResource FontSize}" />
+                <Setter Property = "Padding"
+                        Value = "{StaticResource ControlPadding}" />
+            </Style>
+
+            <Style TargetType = "xctk:DoubleUpDown">
+                <Setter Property = "FontSize"
+                        Value = "{StaticResource FontSize}" />
+                <Setter Property = "Padding"
+                        Value = "{StaticResource ControlPadding}" />
+                <Setter Property = "Margin"
+                        Value = "0" />
+                <Setter Property = "BorderThickness"
+                        Value = "0" />
+                <Setter Property = "Background"
+                        Value = "Transparent" />
+            </Style>
+
+            <Style TargetType = "Border">
+                <Setter Property = "BorderThickness"
+                        Value = "{StaticResource BorderThickness}" />
+                <Setter Property = "BorderBrush"
+                        Value = "{StaticResource BlackBrush}" />
+            </Style>
+
+            <Style TargetType = "ListBox">
+                <Setter Property = "BorderThickness"
+                        Value = "{StaticResource BorderThickness}" />
+                <Setter Property = "BorderBrush"
+                        Value = "{StaticResource BlackBrush}" />
+            </Style>
+
+            <Style TargetType = "DataGrid">
+                <Setter Property = "BorderThickness"
+                        Value = "{StaticResource BorderThickness}" />
+                <Setter Property = "BorderBrush"
+                        Value = "{StaticResource BlackBrush}" />
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
