--- a/FunctionGraphManager/Views/MainWindow.xaml
+++ b/FunctionGraphManager/Views/MainWindow.xaml
@@ -3,17 +3,22 @@
         xmlns:x = "http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d = "http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc = "http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:main = "clr-namespace:ViewModels.Main;assembly=ViewModels"
+        xmlns:regions = "clr-namespace:FunctionGraphManager.Views.Regions"
         mc:Ignorable = "d"
         Title = "Function Graph Manager"
         WindowStartupLocation = "CenterScreen"
         ResizeMode = "NoResize"
         WindowState = "Maximized"
-        WindowStyle = "None">
+        WindowStyle = "None"
+        Background = "AntiqueWhite">
 
-    <d:Control.DataContext>
-        <main:MainViewModel />
-    </d:Control.DataContext>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height = "Auto" />
+            <RowDefinition Height = "*" />
+        </Grid.RowDefinitions>
 
-    <Grid />
+        <regions:CommandRegion Grid.Row = "0" />
+        <regions:MainRegion Grid.Row = "1" />
+    </Grid>
 </Window>
