--- a/FunctionGraphManager/App.xaml
+++ b/FunctionGraphManager/App.xaml
@@ -13,6 +13,7 @@
             <system:Double x:Key = "Spacing">10</system:Double>
             <Brush x:Key = "BlackBrush">Black</Brush>
             <Brush x:Key = "GrayBrush">Gray</Brush>
+            <Brush x:Key = "WhiteBrush">WhiteSmoke</Brush>
 
             <Thickness x:Key = "ControlPadding"
                        Left = "5"
@@ -61,6 +62,8 @@
             </Style>
 
             <Style TargetType = "Border">
+                <Setter Property = "Background"
+                        Value = "Transparent" />
                 <Setter Property = "BorderThickness"
                         Value = "{StaticResource BorderThickness}" />
                 <Setter Property = "BorderBrush"
@@ -68,13 +71,32 @@
             </Style>
 
             <Style TargetType = "ListBox">
+                <Setter Property = "Padding"
+                        Value = "0" />
+                <Setter Property = "Background"
+                        Value = "Transparent" />
                 <Setter Property = "BorderThickness"
                         Value = "{StaticResource BorderThickness}" />
                 <Setter Property = "BorderBrush"
                         Value = "{StaticResource BlackBrush}" />
+                <Setter Property = "Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType = "ListBox">
+                            <Border Margin = "{TemplateBinding Margin}"
+                                    Padding = "{TemplateBinding Padding}"
+                                    Background = "{TemplateBinding Background}"
+                                    BorderThickness = "{TemplateBinding BorderThickness}"
+                                    BorderBrush = "{TemplateBinding BorderBrush}">
+                                <ItemsPresenter />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
             </Style>
 
             <Style TargetType = "DataGrid">
+                <Setter Property = "Background"
+                        Value = "Transparent" />
                 <Setter Property = "BorderThickness"
                         Value = "{StaticResource BorderThickness}" />
                 <Setter Property = "BorderBrush"
